Added windows steps to the readme